force-app/main/default/objects/fileforcem1__Community_Event__e/fileforcem1__Community_Event__e.object-meta.xml
<CustomObject>
    <label>Community Event</label>
    <pluralLabel>Community Events</pluralLabel>
</CustomObject>