force-app/main/default/objects/fileforcem1__Community_Event__e/fields/fileforcem1__Item_Id__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Item_Id__c</fullName>
    <label>Item Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>