force-app/main/default/objects/fileforcem1__Community_Event__e/fields/fileforcem1__Item_Name__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Item_Name__c</fullName>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>