force-app/main/default/objects/fileforcem1__Community_Event__e/fields/fileforcem1__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>