force-app/main/default/objects/fileforcem1__Community_Event__e/fields/fileforcem1__Type__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Type__c</fullName>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>